--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    
+    <div class="inputBTN"><a href="./input.html">Pridėti produktą</a></div>  
 <div class="productsWrapper" id="productsWrapper"></div>
     <script src="./script.js"></script>
 </body>
