--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 </head>
 <body>
     <div class="inputBTN"><a href="./input.html">Pridėti produktą</a></div>  
-<div class="productsWrapper" id="productsWrapper"></div>
+<div class="productsWrapper" id="productsWrapper">
+</div>
     <script src="./script.js"></script>
 </body>
 </html>
